{
    "name": "BallController",
    "maps": [
        {
            "name": "BallMove",
            "id": "309ca6cc-8471-4028-8fa4-e5e7912bde4f",
            "actions": [
                {
                    "name": "GetInput",
                    "type": "Value",
                    "id": "91e5776c-b066-40d8-afed-1bab8950bef3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Clicked",
                    "type": "Button",
                    "id": "824dbd6b-4684-4334-abe6-5ebd93803e5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6cda9c93-1d06-4ffa-b00a-f8b6786611e4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "BallControl",
                    "action": "GetInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "27b48239-a7f3-4bdb-8f36-2685b274fcb7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4f01a973-d28a-4880-86af-0d2022f70dcc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "BallControl",
                    "action": "GetInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4649edde-5028-4301-a05b-aef85b82af04",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "BallControl",
                    "action": "GetInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c5ea6dbc-8635-480e-a51b-99bc7dedd1ae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "BallControl",
                    "action": "GetInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eaa1e93d-e6a2-4e24-987e-3932f1dbfb34",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "BallControl",
                    "action": "GetInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b53a4255-79bc-4248-a9ed-d0ce947d3ef5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee66a72a-3fdb-47bc-9dc3-9ade37db2cf2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": []
        },
        {
            "name": "BallControl",
            "bindingGroup": "BallControl",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}